
2013-10-15  Take Vos  <take.vos@vosgames.nl>

	* Make project compilable on Linux.
